@@ -325,6 +325,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #6286: Now Distutils upload command is based on urllib2 instead of
+  httplib, allowing the usage of http_proxy.
+
 - Issue #6271: mmap tried to close invalid file handle (-1) when annonymous.
   (On Unix)
 
